renomeando pastas para correta formatacao em dart

--- a/lista_4/pubspec.yaml
+++ b/lista_4/pubspec.yaml
@@ -1,4 +1,4 @@
-name: lista3
+name: lista_4
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
