--- a/lista_2/pubspec.yaml
+++ b/lista_2/pubspec.yaml
@@ -1,4 +1,4 @@
-name: lista4
+name: lista_2
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
